[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aoc-utils-runarmod",
    "beautifulsoup4>=4.12.2",
    "colorama>=0.4.6",
    "markdownify>=0.11.6",
    "matplotlib>=3.8.2",
    "more-itertools>=10.8.0",
    "networkx>=3.6",
    "numpy>=1.26.2",
    "pause>=0.3",
    "primefac>=2.0.12",
    "pyperclip>=1.8.2",
    "python-dotenv>=1.0.0",
    "pytz>=2022.7.1",
    "Requests>=2.32.0",
    "tqdm>=4.66.3",
    "z3-solver>=4.15.4.0",
]

[tool.uv.workspace]
members = [
    "package",
]

[tool.uv.sources]
aoc-utils-runarmod = { workspace = true }
